--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Task Manager</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body class="bg-light">
   <div class="container my-5">
@@ -12,17 +14,28 @@
 
     <div class="card p-4 mb-4">
       <h4>Authentication</h4>
-      <input id="username" class="form-control my-2" placeholder="Username">
-      <input id="password" class="form-control my-2" type="password" placeholder="Password">
-      <button class="btn btn-primary me-2" onclick="signup()">Sign Up</button>
-      <button class="btn btn-success me-2" onclick="login()">Login</button>
-      <button class="btn btn-danger" onclick="logout()">Logout</button>
+      <input id="username" class="form-control my-2" placeholder="Username" />
+      <input
+        id="password"
+        class="form-control my-2"
+        type="password"
+        placeholder="Password"
+      />
+      <div class="d-flex gap-2">
+        <button class="btn btn-primary" onclick="signup()">Sign Up</button>
+        <button class="btn btn-success" onclick="login()">Login</button>
+        <button class="btn btn-danger" onclick="logout()">Logout</button>
+      </div>
     </div>
 
     <div class="card p-4 mb-4">
       <h4>Create Task</h4>
-      <input id="title" class="form-control my-2" placeholder="Task Title">
-      <input id="description" class="form-control my-2" placeholder="Task Description">
+      <input id="title" class="form-control my-2" placeholder="Task Title" />
+      <input
+        id="description"
+        class="form-control my-2"
+        placeholder="Task Description"
+      />
       <button class="btn btn-success" onclick="createTask()">Add Task</button>
     </div>
 
